<resources>
    <string name="app_name" translatable="false">pap</string>
    <string name="titulo">Titulo</string>
    <string name="PorçõesIngredientes">Porções/Ingredientes</string>
    <string name="Categoria">Categoria</string>
    <string name="Notas">Notas</string>
    <string name="Mododepreparacao">Modo de preparacao</string>
    <string name="Tempodepreparacao">Tempo de preparacao</string>
    <string name="Entrar">Entrar</string>
    <string name="Nãotemconta">Não tem conta?</string>
    <string name="RegisteAgora">Registe Agora</string>
    <string name="Senha">Senha</string>
    <string name="Registar">Registar</string>
    <string name="Nome">Nome</string>
    <string name="JáéutilizadordaRecipeHub">Já é utilizador da RecipeHub?</string>
    <string name="EntrarAgora">Entrar agora</string>
    <string name="Adicionar">Adicionar</string>
    <string name="Adicioneumitem">Adicione um item</string>
    <string name="LimparLista">Limpar Lista</string>
    <string name="Assuasreceitas">As suas receitas</string>
    <string name="Filtrar">Filtrar</string>
    <string name="Olá">Olá,</string>
    <string name="Eliminarconta">Eliminar conta</string>
    <string name="TotaldereceitasX">Total de receitas:X</string>
    <string name="Guardar">Guardar</string>
    <string name="Casa">Casa</string>
    <string name="Perfil">Perfil</string>
    <string name="Categoriaa">Categoria:</string>
    <string name="Autenticacaosemsucesso">Autênticação sem sucesso!</string>
    <string name="Preenchaoscamposemfalta">Preencha os campos em falta!</string>
    <string name="Ocorreuumerro">Ocorreu um erro!</string>
    <string name="Autenticacaocomsucesso">Autenticação com sucesso!</string>
    <string name="Erroaoeliminarconta">Erro ao eliminar conta!</string>
    <string name="Contaeliminadacomsucesso">Conta eliminada com sucesso!</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Sim">Sim</string>
    <string name="Confirmação">Confirmação</string>
    <string name="Temcertezadequedesejaexcluirasuaconta">Tem certeza de que deseja excluir a sua conta?</string>
    <string name="Erroaoalterarnome">Erro ao alterar nome!</string>
    <string name="Nomealteradocomsucesso">Nome alterado com sucesso</string>
    <string name="Receitaadicionadacomsucesso">Receita adicionada com sucesso!</string>
    <string name="Erroaoadicionarreceita">Erro ao adicionar receita!</string>
    <string name="foto">Tirar foto</string>
    <string name="redefenirsenha">Redefinir Senha</string>
    <string name="Naoseesquecadeverificaroseuemail">Não se esqueça de verificar o seu email</string>
    <string name="Verefiqueoseuemailparaconseguiravancar">Verifique o seu email para conseguir avançar</string>
    <string name="SairConta">Sair Conta</string>
    <string name="MododePreparo">Modo de Preparação</string>
    <string name="TempodePreparação">Tempo de Preparação</string>
    <string name="PorçãoIngredientes">Porção/Ingredientes</string>
    <string name="Adicionarfoto">Adicionar foto</string>
    <string name="Adicionartempo">Adicionar tempo</string>
    <string name="japodeescrever">Já pode editar</string>
    <string name="Sucesso">Sucesso!</string>
    <string name="Semsucesso">Sem sucesso!</string>
    <string name="Removerfoto">Remover foto</string>
    <string name="Temcertezadequedesejaapagarestareceita">Tem certeza de que deseja apagar esta receita?</string>
    <string name="Receitaapagadacomsucesso">Receita apagada com sucesso!</string>
    <string name="Falhaaoapagarareceita">Falha ao apagar a receita!</string>

</resources>